[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"               # or latest: cargo add sysinfo
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
rand = "0.8"

# Optional but nice: real username (cross-platform)
whoami = "1.5"                 # ← add this line
